# src/main/java/ai/memas/memasclient/model/RememberRequest.java
@@ -15,6 +15,7 @@ package ai.memas.memasclient.model;
 
 import java.util.Objects;
 import java.util.Arrays;
+import ai.memas.memasclient.model.Citation;
 import com.google.gson.TypeAdapter;
 import com.google.gson.annotations.JsonAdapter;
 import com.google.gson.annotations.SerializedName;
@@ -48,43 +49,68 @@ import java.util.Set;
 import ai.memas.memasclient.invoker.JSON;
 
 /**
- * RecollectRequest
+ * RememberRequest
  */
 @javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2023-08-20T02:18:29.780519497-07:00[America/Los_Angeles]")
-public class RecollectRequest {
-  public static final String SERIALIZED_NAME_CLUE = "clue";
-  @SerializedName(SERIALIZED_NAME_CLUE)
-  private String clue;
+public class RememberRequest {
+  public static final String SERIALIZED_NAME_DOCUMENT = "document";
+  @SerializedName(SERIALIZED_NAME_DOCUMENT)
+  private String document;
+
+  public static final String SERIALIZED_NAME_CITATION = "citation";
+  @SerializedName(SERIALIZED_NAME_CITATION)
+  private Citation citation;
 
   public static final String SERIALIZED_NAME_CORPUS_PATHNAME = "corpus_pathname";
   @SerializedName(SERIALIZED_NAME_CORPUS_PATHNAME)
   private String corpusPathname;
 
-  public RecollectRequest() {
+  public RememberRequest() {
   }
 
-  public RecollectRequest clue(String clue) {
+  public RememberRequest document(String document) {
     
-    this.clue = clue;
+    this.document = document;
     return this;
   }
 
    /**
-   * Get clue
-   * @return clue
+   * Get document
+   * @return document
   **/
   @javax.annotation.Nonnull
-  public String getClue() {
-    return clue;
+  public String getDocument() {
+    return document;
   }
 
 
-  public void setClue(String clue) {
-    this.clue = clue;
+  public void setDocument(String document) {
+    this.document = document;
   }
 
 
-  public RecollectRequest corpusPathname(String corpusPathname) {
+  public RememberRequest citation(Citation citation) {
+    
+    this.citation = citation;
+    return this;
+  }
+
+   /**
+   * Get citation
+   * @return citation
+  **/
+  @javax.annotation.Nonnull
+  public Citation getCitation() {
+    return citation;
+  }
+
+
+  public void setCitation(Citation citation) {
+    this.citation = citation;
+  }
+
+
+  public RememberRequest corpusPathname(String corpusPathname) {
     
     this.corpusPathname = corpusPathname;
     return this;
@@ -94,7 +120,7 @@ public class RecollectRequest {
    * Full name of a corpus, specifying which namespace the corpus is under.  The name takes on the format of \\\&quot;&lt;namespace_pathname&gt;:&lt;corpus_name&gt;\\\&quot;
    * @return corpusPathname
   **/
-  @javax.annotation.Nonnull
+  @javax.annotation.Nullable
   public String getCorpusPathname() {
     return corpusPathname;
   }
@@ -114,21 +140,23 @@ public class RecollectRequest {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    RecollectRequest recollectRequest = (RecollectRequest) o;
-    return Objects.equals(this.clue, recollectRequest.clue) &&
-        Objects.equals(this.corpusPathname, recollectRequest.corpusPathname);
+    RememberRequest rememberRequest = (RememberRequest) o;
+    return Objects.equals(this.document, rememberRequest.document) &&
+        Objects.equals(this.citation, rememberRequest.citation) &&
+        Objects.equals(this.corpusPathname, rememberRequest.corpusPathname);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(clue, corpusPathname);
+    return Objects.hash(document, citation, corpusPathname);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class RecollectRequest {\n");
-    sb.append("    clue: ").append(toIndentedString(clue)).append("\n");
+    sb.append("class RememberRequest {\n");
+    sb.append("    document: ").append(toIndentedString(document)).append("\n");
+    sb.append("    citation: ").append(toIndentedString(citation)).append("\n");
     sb.append("    corpusPathname: ").append(toIndentedString(corpusPathname)).append("\n");
     sb.append("}");
     return sb.toString();
@@ -152,46 +180,49 @@ public class RecollectRequest {
   static {
     // a set of all properties/fields (JSON key names)
     openapiFields = new HashSet<String>();
-    openapiFields.add("clue");
+    openapiFields.add("document");
+    openapiFields.add("citation");
     openapiFields.add("corpus_pathname");
 
     // a set of required properties/fields (JSON key names)
     openapiRequiredFields = new HashSet<String>();
-    openapiRequiredFields.add("clue");
-    openapiRequiredFields.add("corpus_pathname");
+    openapiRequiredFields.add("document");
+    openapiRequiredFields.add("citation");
   }
 
  /**
   * Validates the JSON Object and throws an exception if issues found
   *
   * @param jsonObj JSON Object
-  * @throws IOException if the JSON Object is invalid with respect to RecollectRequest
+  * @throws IOException if the JSON Object is invalid with respect to RememberRequest
   */
   public static void validateJsonObject(JsonObject jsonObj) throws IOException {
       if (jsonObj == null) {
-        if (!RecollectRequest.openapiRequiredFields.isEmpty()) { // has required fields but JSON object is null
-          throw new IllegalArgumentException(String.format("The required field(s) %s in RecollectRequest is not found in the empty JSON string", RecollectRequest.openapiRequiredFields.toString()));
+        if (!RememberRequest.openapiRequiredFields.isEmpty()) { // has required fields but JSON object is null
+          throw new IllegalArgumentException(String.format("The required field(s) %s in RememberRequest is not found in the empty JSON string", RememberRequest.openapiRequiredFields.toString()));
         }
       }
 
       Set<Entry<String, JsonElement>> entries = jsonObj.entrySet();
       // check to see if the JSON string contains additional fields
       for (Entry<String, JsonElement> entry : entries) {
-        if (!RecollectRequest.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `RecollectRequest` properties. JSON: %s", entry.getKey(), jsonObj.toString()));
+        if (!RememberRequest.openapiFields.contains(entry.getKey())) {
+          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `RememberRequest` properties. JSON: %s", entry.getKey(), jsonObj.toString()));
         }
       }
 
       // check to make sure all required properties/fields are present in the JSON string
-      for (String requiredField : RecollectRequest.openapiRequiredFields) {
+      for (String requiredField : RememberRequest.openapiRequiredFields) {
         if (jsonObj.get(requiredField) == null) {
           throw new IllegalArgumentException(String.format("The required field `%s` is not found in the JSON string: %s", requiredField, jsonObj.toString()));
         }
       }
-      if (!jsonObj.get("clue").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `clue` to be a primitive type in the JSON string but got `%s`", jsonObj.get("clue").toString()));
+      if (!jsonObj.get("document").isJsonPrimitive()) {
+        throw new IllegalArgumentException(String.format("Expected the field `document` to be a primitive type in the JSON string but got `%s`", jsonObj.get("document").toString()));
       }
-      if (!jsonObj.get("corpus_pathname").isJsonPrimitive()) {
+      // validate the required field `citation`
+      Citation.validateJsonObject(jsonObj.getAsJsonObject("citation"));
+      if ((jsonObj.get("corpus_pathname") != null && !jsonObj.get("corpus_pathname").isJsonNull()) && !jsonObj.get("corpus_pathname").isJsonPrimitive()) {
         throw new IllegalArgumentException(String.format("Expected the field `corpus_pathname` to be a primitive type in the JSON string but got `%s`", jsonObj.get("corpus_pathname").toString()));
       }
   }
@@ -200,22 +231,22 @@ public class RecollectRequest {
     @SuppressWarnings("unchecked")
     @Override
     public <T> TypeAdapter<T> create(Gson gson, TypeToken<T> type) {
-       if (!RecollectRequest.class.isAssignableFrom(type.getRawType())) {
-         return null; // this class only serializes 'RecollectRequest' and its subtypes
+       if (!RememberRequest.class.isAssignableFrom(type.getRawType())) {
+         return null; // this class only serializes 'RememberRequest' and its subtypes
        }
        final TypeAdapter<JsonElement> elementAdapter = gson.getAdapter(JsonElement.class);
-       final TypeAdapter<RecollectRequest> thisAdapter
-                        = gson.getDelegateAdapter(this, TypeToken.get(RecollectRequest.class));
+       final TypeAdapter<RememberRequest> thisAdapter
+                        = gson.getDelegateAdapter(this, TypeToken.get(RememberRequest.class));
 
-       return (TypeAdapter<T>) new TypeAdapter<RecollectRequest>() {
+       return (TypeAdapter<T>) new TypeAdapter<RememberRequest>() {
            @Override
-           public void write(JsonWriter out, RecollectRequest value) throws IOException {
+           public void write(JsonWriter out, RememberRequest value) throws IOException {
              JsonObject obj = thisAdapter.toJsonTree(value).getAsJsonObject();
              elementAdapter.write(out, obj);
            }
 
            @Override
-           public RecollectRequest read(JsonReader in) throws IOException {
+           public RememberRequest read(JsonReader in) throws IOException {
              JsonObject jsonObj = elementAdapter.read(in).getAsJsonObject();
              validateJsonObject(jsonObj);
              return thisAdapter.fromJsonTree(jsonObj);
@@ -226,18 +257,18 @@ public class RecollectRequest {
   }
 
  /**
-  * Create an instance of RecollectRequest given an JSON string
+  * Create an instance of RememberRequest given an JSON string
   *
   * @param jsonString JSON string
-  * @return An instance of RecollectRequest
-  * @throws IOException if the JSON string is invalid with respect to RecollectRequest
+  * @return An instance of RememberRequest
+  * @throws IOException if the JSON string is invalid with respect to RememberRequest
   */
-  public static RecollectRequest fromJson(String jsonString) throws IOException {
-    return JSON.getGson().fromJson(jsonString, RecollectRequest.class);
+  public static RememberRequest fromJson(String jsonString) throws IOException {
+    return JSON.getGson().fromJson(jsonString, RememberRequest.class);
   }
 
  /**
-  * Convert an instance of RecollectRequest to an JSON string
+  * Convert an instance of RememberRequest to an JSON string
   *
   * @return JSON string
   */
